# noir-picus-adapter

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SOUNDNESS.md
corpus/: ANALYSIS.md  COMPILER_REGRESSION.md  DIVERSITY.md  README.md  RESEARCH_REPORT.md  TRIAGE.md  check_compiler_regression.sh  check_corpus.sh  check_realistic_corpus.sh  compiler_regression_manifest.tsv  compiler_regression_provenance.tsv  manifest.tsv  provenance.tsv  realistic_manifest.tsv  realistic_provenance.tsv
corpus/artifacts/: vuln_arkworks_penumbra_fixed_point_add.json  vuln_arkworks_penumbra_fixed_point_cmp.json  vuln_aztec_nullifier_index_alias.json  vuln_bellperson_lurk_reduce_sym.json  vuln_bellperson_neptune_zero_padding.json  vuln_bigint_remainder_overflow.json  vuln_binary_merkle_selector.json  vuln_bits2point_free_output.json  vuln_cairo_negative_range.json  vuln_cairo_position_range.json  vuln_cairo_power_of_two_check.json  vuln_circom_chacha_addition.json  vuln_circom_chacha_left_rotation.json  vuln_circom_chacha_xor.json  vuln_circom_darkforest_rangeproof.json  vuln_circom_decoder_onehot.json  vuln_circom_self_merkle_path_bits.json  vuln_circom_self_packed_byte_range.json  vuln_circom_zkemail_sha256_zero.json  vuln_evm_div_mod_remainder.json  vuln_gnark_nonunique_bits.json  vuln_halo2_call_warm_status.json  vuln_halo2_calldata_rlc_binding.json  vuln_halo2_chainid_tag.json  vuln_halo2_mod_gadget.json  vuln_halo2_mpt_onehot.json  (+13 more)
examples/: README.md
src/: artifact.rs  debug_info.rs  lib.rs  main.rs  report.rs  solver.rs  targets.rs  translate.rs
(+253 files in other folders)
